--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Game Developer</title>
+    <title>Patrick Olson - Game Developer</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -25,7 +27,10 @@
             padding: 0 20px;
         }
 
-        h1, h2 {
+        h1{
+            color: #FF5733;
+        }
+        h2 {
             color: #333;
         }
 
@@ -43,37 +48,44 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Your Name</h1>
-        <p>Game Developer</p>
+    <header class="bg-dark text-white">
+        <h1>Patrick Olson</h1>
+        <p>Gaming & Interactive Media, and Mobile Technology Student</p>
     </header>
 
-    <section>
+    <section class="container">
         <h2>About Me</h2>
         <p>
-            Welcome to my game developer portfolio! I am passionate about creating immersive and entertaining gaming experiences. With a strong background in game design and programming, I strive to bring unique and innovative ideas to life.
+            Hey there! I'm a multi-faceted individual with a deep love for both the great outdoors and the digital realm with a passion for making the most out of every season. When winter blankets the mountains with snow, you can find me carving down the slopes on my snowboard, laughing and competing with friends as we chase the perfect run. But as the snow melts and the sun warms up, I transition to my summer mode – camping by picturesque lakes, casting lines for some leisurely fishing, and soaking up the sun's rays. But don't be surprised if you find me indoors as well, totally engrossed in the virtual world. I'm a gaming enthusiast with a longstanding love for classics like Skate 3, Halo Reach, and Battlefield 3. The roots of my gaming journey trace back to Halo 3, where endless hours of fun on custom maps with friends ignited my fascination with game development. Those shared moments of creativity and camaraderie shaped my path, propelling me into the world of game development where I bring virtual worlds to life.
+
+            So, whether I'm knee deep in powder or waist deep in code, I'm all about creating experiences and connections that last and inspire others.
         </p>
     </section>
 
-    <section>
+    <section class="container">
         <h2>Projects</h2>
 
         <div class="project">
-            <h3>Game Title 1</h3>
-            <p>Description of the first game project. Highlight key features and technologies used.</p>
+            <h3>Virtual Reality Game</h3>
+            <p>Developed in a single semester, this project showcases the ability to create and integrate custom 3D modeling assets, work with Unity XR Core, and leverage various other Unity packages to construct an immersive game preview. With a commitment to continuous improvement, this project serves as a precursor to my ambitious senior capstone, showcasing not only my technical abilities but also my understanding of the nuances of virtual reality within Unity.</p>
             <a href="link-to-github-repo" target="_blank">GitHub Repository</a>
         </div>
 
         <div class="project">
-            <h3>Game Title 2</h3>
-            <p>Description of the second game project. Showcase your skills and achievements in this project.</p>
+            <h3>Interactive Comic</h3>
+            <p>This project involved the challenge of creating an interactive comic centered on a randomly assigned topic, aiming to transform it into a cohesive and captivating experience. Through collaborative efforts, we successfully crafted an immersive and unique narrative focused on bidirectional time flow, showcasing both our creative and technical abilities as a team.</p>
             <a href="link-to-github-repo" target="_blank">GitHub Repository</a>
         </div>
     </section>
 
-    <footer>
+    <footer class="bg-dark text-white">
         <p>Contact: your.email@example.com</p>
         <p>Connect with me on <a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></p>
     </footer>
+
+    <!-- Bootstrap JS (Optional) -->
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script> -->
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 </body>
 </html>
