--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,14 +28,14 @@
             padding: 0 20px;
         }
 
-        h1{
+        h1 {
             color: #FF5733;
         }
+
         h2 {
             color: #333;
         }
 
-        
         .project {
             margin-bottom: 2em;
         }
@@ -45,41 +46,75 @@
             text-align: center;
             padding: 1em 0;
         }
+
+        hr {
+            border: none;
+            height: 1px;
+            /* Set the hr color */
+            background-color: #333;
+            /* Modern Browsers */
+        }
+
+        .profile-img {
+            display: block;
+            margin: 0 auto;
+            max-width: 300px;
+            height: auto;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
+
 <body>
     <header class="bg-dark text-white">
         <h1>Patrick Olson</h1>
         <p>Gaming & Interactive Media, and Mobile Technology Student</p>
     </header>
 
+    <img src="assets/img/Headshot.jpg" alt="Profile Picture" class="profile-img">
+
     <section class="container">
         <h2>About Me</h2>
         <p>
-            Hey there! I'm a multi-faceted individual with a deep love for both the great outdoors and the digital realm with a passion for making the most out of every season. When winter blankets the mountains with snow, you can find me carving down the slopes on my snowboard, laughing and competing with friends as we chase the perfect run. But as the snow melts and the sun warms up, I transition to my summer mode – camping by picturesque lakes, casting lines for some leisurely fishing, and soaking up the sun's rays. But don't be surprised if you find me indoors as well, totally engrossed in the virtual world. I'm a gaming enthusiast with a longstanding love for classics like Skate 3, Halo Reach, and Battlefield 3. The roots of my gaming journey trace back to Halo 3, where endless hours of fun on custom maps with friends ignited my fascination with game development. Those shared moments of creativity and camaraderie shaped my path, propelling me into the world of game development where I bring virtual worlds to life.
-
-            So, whether I'm knee deep in powder or waist deep in code, I'm all about creating experiences and connections that last and inspire others.
+            Hey there! I'm Patrick Olson, a multi-faceted individual with a deep love for both the great outdoors and
+            the digital realm. I'm passionate about making the most out of every season. Whether I'm carving down the
+            slopes on my snowboard in winter or soaking up the sun's rays by picturesque lakes in summer, I'm all about
+            creating experiences and connections that last and inspire others. I'm also a gaming enthusiast with a
+            longstanding love for classics like Skate 3, Halo Reach, and Battlefield 3. The roots of my gaming journey
+            trace back to Halo 3, where endless hours of fun on custom maps with friends ignited my fascination with
+            game development. Those shared moments of creativity and camaraderie shaped my path, propelling me into the
+            world of game development where I bring virtual worlds to life.
         </p>
     </section>
+    <hr>
 
     <section class="container">
         <h2>Projects</h2>
 
         <div class="project">
             <h3>Virtual Reality Game</h3>
-            <p>Developed in a single semester, this project showcases the ability to create and integrate custom 3D modeling assets, work with Unity XR Core, and leverage various other Unity packages to construct an immersive game preview. With a commitment to continuous improvement, this project serves as a precursor to my ambitious senior capstone, showcasing not only my technical abilities but also my understanding of the nuances of virtual reality within Unity.</p>
+            <p>Developed in a single semester, this project showcases the ability to create and integrate custom 3D
+                modeling assets, work with Unity XR Core, and leverage various other Unity packages to construct an
+                immersive game preview. With a commitment to continuous improvement, this project serves as a precursor
+                to my ambitious senior capstone, showcasing not only my technical abilities but also my understanding of
+                the nuances of virtual reality within Unity.</p>
             <a href="link-to-github-repo" target="_blank">GitHub Repository</a>
         </div>
+        <hr>
 
         <div class="project">
             <h3>Interactive Comic</h3>
-            <p>This project involved the challenge of creating an interactive comic centered on a randomly assigned topic, aiming to transform it into a cohesive and captivating experience. Through collaborative efforts, we successfully crafted an immersive and unique narrative focused on bidirectional time flow, showcasing both our creative and technical abilities as a team.</p>
+            <p>This project involved the challenge of creating an interactive comic centered on a randomly assigned
+                topic, aiming to transform it into a cohesive and captivating experience. Through collaborative efforts,
+                we successfully crafted an immersive and unique narrative focused on bidirectional time flow, showcasing
+                both our creative and technical abilities as a team.</p>
             <a href="link-to-github-repo" target="_blank">GitHub Repository</a>
         </div>
     </section>
 
     <footer class="bg-dark text-white">
-        <p>Contact: your.email@example.com</p>
+        <p>Message me on: <a href="mailto:olsonpatrick18@gmail.com">Gmail</a></p>
         <p>Connect with me on <a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></p>
     </footer>
 
@@ -88,4 +123,5 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script> -->
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 </body>
+
 </html>
