--- a/index.html
+++ b/index.html
@@ -6,143 +6,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patrick Olson - Game Developer</title>
     <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 2em 0;
-        }
-
-        section {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2em 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            color: #FF5733;
-        }
-
-        h2 {
-            color: #333;
-            margin-top: 30px;
-        }
-
-        .wrapper h3 {
-            color: #fff;
-            font-size: 50px;
-            font-family: "ubuntu";
-            text-transform: uppercase;
-            font-weight: 700;
-            font-family: "Josefin Sans", sans-serif;
-            background: linear-gradient(to right, #FF5733 20%, #fff 60%, #5bdaff 40%);
-            background-size: auto auto;
-            background-clip: border-box;
-            background-size: 200% auto;
-            color: #fff;
-            background-clip: text;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            animation: textclip 3.5s linear infinite;
-            display: inline-block;
-        }
-
-        .project {
-            margin-bottom: 2em;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 2em 0;
-        }
-
-        hr {
-            border: none;
-            height: 1px;
-            background-color: #ddd;
-            margin: 40px 0;
-        }
-
-        .profile-img {
-            display: block;
-            margin: 0 auto;
-            max-width: 200px;
-            height: auto;
-            border-radius: 50%;
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: 1.1em;
-            line-height: 1.6;
-        }
-
-        a {
-            color: #FF5733;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        a:hover {
-            color: #FF8C66;
-        }
-
-        .wrapper {
-            text-align: center;
-        }
-
-        @keyframes textclip {
-            to {
-                background-position: 200% center;
-            }
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
     <header>
-        <div class="wrapper">
-            <h3>Patrick Olson</h3>
-        </div>
-        <p>Gaming & Interactive Media, and Mobile Technology Student</p>
+        <p>Place Nav Stuff Here</p>
     </header>
 
     <section>
-        <img src="assets/img/Headshot.jpg" alt="Profile Picture" class="profile-img">
-        <h2>About Me</h2>
-        <p>
-            Hey there! I'm Patrick Olson, a multi-faceted individual with a deep love for both the great outdoors and
-            the digital realm. I'm passionate about making the most out of every season. Whether I'm carving down the
-            slopes on my snowboard in winter or soaking up the sun's rays by picturesque lakes in summer, I'm all about
-            creating experiences and connections that last and inspire others. I'm also a gaming enthusiast with a
-            longstanding love for classics like Skate 3, Halo Reach, and Battlefield 3. The roots of my gaming journey
-            trace back to Halo 3, where endless hours of fun on custom maps with friends ignited my fascination with
-            game development. Those shared moments of creativity and camaraderie shaped my path, propelling me into the
-            world of game development where I bring virtual worlds to life.
-        </p>
+        <div class="wrapper">
+            <h3>Patrick Olson</h3>
+            <div class="wrapper">
+                <h4>
+                    <center>Gaming & Interactive Media, and Mobile Technology Student</center>
+                </h4>
+            </div>
     </section>
-    <hr>
+
+    <section class="type-b">
+        <div class="intro">
+            <h3>Hello! My name is Patrick and I am currently a student pursuing my major in Gaming, Interactive Media,
+                and Mobile Technology and a double minor in Marketing and Media at Boise State University. My
+                specialties include coding and design, with experience in augmented reality. Below you can find my
+                portfolio showcasing some of my work on different projects.</p>
+        </div>
+    </section>
 
     <section>
-        <h2>Projects</h2>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h2>Virtual Reality Game</h2>
+                    <p>Developed in a single semester, this project showcases the ability to create and integrate custom
+                        3D
+                        modeling assets, work with Unity XR Core, and leverage various other Unity packages to construct
+                        an
+                        immersive game preview. With a commitment to continuous improvement, this project serves as a
+                        precursor
+                        to my ambitious senior capstone, showcasing not only my technical abilities but also my
+                        understanding of
+                        the nuances of virtual reality within Unity.</p>
 
+                </div>
+                <div class="flip-card-back">
+                    <div class="three-columns-grid">
+                        <div>
+                            <img src="assets/img/GarbageTruck.png" alt="Garbage Truck" class="card-img">
+                        </div>
+                        <div>
+                            <img src="assets/img/ScrollSign.gif" alt="Scrolling Sign" class="card-img">
+                        </div>
+                        <div>
+                            <img src="assets/img/RagdollStand.gif" alt="Ragdoll Effect" class="card-img">
+                        </div>
+                    </div>
+                    <a href="VirtualReality.html">Learn More</a>
+                    <a href="link-to-github-repo" target="_blank">GitHub Repository</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="type-a">
+        <h1>Projects</h1>
         <div class="project">
-            <h3>Virtual Reality Game</h3>
+            <h2>Virtual Reality Game</h2>
             <p>Developed in a single semester, this project showcases the ability to create and integrate custom 3D
                 modeling assets, work with Unity XR Core, and leverage various other Unity packages to construct an
                 immersive game preview. With a commitment to continuous improvement, this project serves as a precursor
@@ -151,9 +89,8 @@
             <a href="link-to-github-repo" target="_blank">GitHub Repository</a>
         </div>
         <hr>
-
         <div class="project">
-            <h3>Interactive Comic</h3>
+            <h2>Interactive Comic</h2>
             <p>This project involved the challenge of creating an interactive comic centered on a randomly assigned
                 topic, aiming to transform it into a cohesive and captivating experience. Through collaborative efforts,
                 we successfully crafted an immersive and unique narrative focused on bidirectional time flow, showcasing
@@ -162,15 +99,26 @@
         </div>
     </section>
 
+    <section class="type-c">
+
+        <img src="assets/img/HeadshotExpanded.png" alt="Profile Picture" class="profile-img">
+        <h2>About Me</h2>
+        <p>Hey there! I'm Patrick Olson, a multi-faceted individual with a deep love for both the great outdoors and the
+            digital realm. I'm passionate about making the most out of every season. Whether I'm carving down the slopes
+            on my snowboard in winter or soaking up the sun's rays by picturesque lakes in summer, I'm all about
+            creating experiences and connections that last and inspire others. I'm also a gaming enthusiast with a
+            longstanding love for classics like Skate 3, Halo Reach, and Battlefield 3. The roots of my gaming journey
+            trace back to Halo 3, where endless hours of fun on custom maps with friends ignited my fascination with
+            game development. Those shared moments of creativity and camaraderie shaped my path, propelling me into the
+            world of game development where I bring virtual worlds to life.</p>
+    </section>
+    <hr>
+
     <footer>
         <p>Message me on: <a href="mailto:olsonpatrick18@gmail.com">Gmail</a></p>
-        <p>Connect with me on <a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></p>
+        <p>Connect with me on: <a href="https://www.linkedin.com/in/patrick-olson-5aa189206/"
+                target="_blank">LinkedIn</a></p>
     </footer>
-
-    <!-- Bootstrap JS (Optional) -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script> -->
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 </body>
 
 </html>
