--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 </head>
 
 <body>
-    <header>
-        <p>Place Nav Stuff Here</p>
-    </header>
+    <nav>
+        <a href="#Projects">Projects</a>
+        <a href="#About">About Me</a>
+    </nav>
 
     <section>
         <div class="wrapper">
@@ -42,7 +43,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="Projects">
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
@@ -99,7 +100,7 @@
         </div>
     </section>
 
-    <section class="type-c">
+    <section class="type-c" id="About">
 
         <img src="assets/img/HeadshotExpanded.png" alt="Profile Picture" class="profile-img">
         <h2>About Me</h2>
@@ -111,6 +112,11 @@
             trace back to Halo 3, where endless hours of fun on custom maps with friends ignited my fascination with
             game development. Those shared moments of creativity and camaraderie shaped my path, propelling me into the
             world of game development where I bring virtual worlds to life.</p>
+
+        <p>C#</p>
+        <div class="container">
+            <div class="skills csharp">70%</div>
+        </div>
     </section>
     <hr>
 
