--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700&display=swap"
@@ -43,7 +40,7 @@
         </div>
     </section>
 
-    <section id="Projects">
+    <section>
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
@@ -114,8 +111,19 @@
             world of game development where I bring virtual worlds to life.</p>
 
         <p>C#</p>
-        <div class="container">
+        <div class="container-for-skills">
             <div class="skills csharp">70%</div>
+        </div>
+        <div class="container-for-skills">
+            <div class="skills unity">75%</div>
+        </div>
+        <div class="container-for-skills">
+            <div class="skills augment">65%</div>
+        </div>
+        <div class="container-for-skills">
+            <div class="skills virtual">60%</div>
+        </div>
+
         </div>
     </section>
     <hr>
@@ -125,6 +133,11 @@
         <p>Connect with me on: <a href="https://www.linkedin.com/in/patrick-olson-5aa189206/"
                 target="_blank">LinkedIn</a></p>
     </footer>
+
+    <!-- Bootstrap JS (placed at the end of the body for faster page loading) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
