--- a/VirtualReality.html
+++ b/VirtualReality.html
@@ -15,9 +15,9 @@
 </head>
 
 <body class="more">
-    <header>
-        <p>Place Nav Stuff Here</p>
-    </header>
+    <nav>
+        <p> Put the back button</p>
+    </nav>
 
     <section class = "learn-more-title">
         <h1>Sanitation Standoff</h1>
