--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="flip-card-section">
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
@@ -97,7 +97,7 @@
         </div>
     </section>
 
-    <section class="type-c" id="About">
+    <section class="about-me" id="About">
 
         <img src="assets/img/HeadshotExpanded.png" alt="Profile Picture" class="profile-img">
         <h2>About Me</h2>
