Deleted Github Links

--- a/AugmentedReality.html
+++ b/AugmentedReality.html
@@ -20,19 +20,19 @@
     </nav>
 
     <section class = "learn-more-title">
-        <h1>Sanitation Standoff</h1>
+        <h1>Card Tactics</h1>
         <div class="three-columns-grid">
             <div>
                 <h2>Challenge</h2>
-                <p>Conceptualize and develop a virtual reality game within a limited timeframe, incorporating Unity XR Core.</p>
+                <p>Develop an augmented reality game within a limited timeframe, incorporating regular playing cards into the gameplay.</p>
             </div>
             <div>
                 <h2>Action</h2>
-                <p>For my game, I thought to embrace the chaos of destruction within virtual reality, envisioning a garbage man on strike who's only way to get the union contract is to cause havoc and create filth with the trash he normally collects. I utilized Unity XR Core to incorporate basic virtual reality interactions, incorporated NPC's with pathfinding using Unity NavMesh's and Ragdoll, and added character and depth to the environment with free Unity Store Packages.</p>
+                <p>We decided to create a two-player augmented reality game where playing cards played a pivotal role.  In my role, I took the initiative to singlehandedly write the necessary code to implement Vuforia's object recognition technology. This code allowed us to scan cards in four positions to dynamically generate game levels. One player could use these scanned cards to strategically spawn traps, while the other player's goal was to use cards to navigate the challenges and progress through the game level.                </p>
             </div>
             <div>
                 <h2>Result</h2>
-                <p>The result of my efforts was a demo game that included a start screen, narrative level, and a gameplay level. This demo was able to showcase object interaction, NPC's, 3D Asset integration, and a loose storyline. Although not a complete product, this demo sets a groundwork for future development that will take place.</p>
+                <p>The result of our efforts was a fully functional and engaging augmented reality game. Players could use ordinary playing cards to interact with the game, creating unique levels with each card scan. This innovative approach added a unique twist to the gaming experience, making it both enjoyable and challenging for the players involved.                </p>
             </div>
         </div>
 
