--- a/InteractiveComic.html
+++ b/InteractiveComic.html
@@ -20,19 +20,21 @@
     </nav>
 
     <section class = "learn-more-title">
-        <h1>Sanitation Standoff</h1>
+        <h1>Poor Dan Is In A Droop</h1>
         <div class="three-columns-grid">
             <div>
                 <h2>Challenge</h2>
-                <p>Conceptualize and develop a virtual reality game within a limited timeframe, incorporating Unity XR Core.</p>
+                <p>The challenge entailed the creation of an interactive comic based on a randomly assigned topic. Our objective was to transform this topic into a cohesive and engaging project. The topic we were given was the bidirectional flow of time.
+
+                </p>
             </div>
             <div>
                 <h2>Action</h2>
-                <p>For my game, I thought to embrace the chaos of destruction within virtual reality, envisioning a garbage man on strike who's only way to get the union contract is to cause havoc and create filth with the trash he normally collects. I utilized Unity XR Core to incorporate basic virtual reality interactions, incorporated NPC's with pathfinding using Unity NavMesh's and Ragdoll, and added character and depth to the environment with free Unity Store Packages.</p>
+                <p>Working closely with my team, I played a vital role in ensuring the successful execution of this project. Collaborating with another developer, we collectively implemented coding solutions essential to realize our comic's vision. My primary responsibilities as one of the project's key coders included scripting and implementing the comic's navigation system, camera functionality, and various interactive elements. This collaborative effort aimed to bring our unique story and comic to life.                </p>
             </div>
             <div>
                 <h2>Result</h2>
-                <p>The result of my efforts was a demo game that included a start screen, narrative level, and a gameplay level. This demo was able to showcase object interaction, NPC's, 3D Asset integration, and a loose storyline. Although not a complete product, this demo sets a groundwork for future development that will take place.</p>
+                <p>​The project's outcome was a seamless and cohesive interactive comic, representing the collective effort of our five-member team. We successfully crafted a distinctive narrative centered around the theme of bidirectional time flow. This project not only showcased our artistic and creative abilities but also demonstrated our technical prowess in developing an interactive and meaningful storytelling experience.                </p>
             </div>
         </div>
 
